# rlcpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  getData.py  train_router.py
RL/: action.py  agent.py  envirenment.py  reward.py  state.py  train.py
agent/: agent.h
agent/ac/: AC_agent.h
agent/basic_agent/: basic_agent.h
agent/ddpg/: ddpg_agent.h
agent/dqn/: double_dqn_dynet_agent.h  dqn_agent.h  dqn_base_agent.h  dqn_dynet_agent.h  dqn_prioritizedReply_agent.h  dqn_randomReply_agent.h  dqn_tinydnn_agent.h
agent/policy_gradient/: basic_pg_agent.h  reinforce_agent.h
agent/ppo/: PPO_Continuous_agent.h  PPO_Discrete_agent.h  demo.py  demo_tf.py
agent/qlearning/: qlearning_agent.h
agent/sarsa/: sarsa_agent.h
algorithm/: network.h  random_reply.h
cmake/: fetch_lib.cmake
common/: rl_config.h  state_action.h
doc/: 20220302_QLearning_DQN_DDPG_yeting.pptx  202205011_PG_PPO_yeting.pptx
env/: env.h
env/aifan_simple/: aifan.h
env/grpc_gym/: gym_env.h
env/grpc_gym/gymServer/: gymEnv_pb2.py  server.py
env/grpc_gym/gymServer/test/: testProto.py
env/grpc_gym/proto/: gen_cpp.sh  gymEnv.proto
env/grpc_gym/proto_out/: gymEnv.grpc.pb.cc  gymEnv.pb.cc  gymEnv.pb.h
env/gym_cpp/: gymcpp.h
env/gym_cpp/gym_wrapper/: gym_wrapper.py
env/gym_env/: gym_env.h
env/gym_env/gymServer/: gymEnv_pb2.py  server.py
env/gym_env/proto/: gen_python.sh  gymEnv.proto
env/gym_env/proto_out/: gymEnv.pb.cc  gymEnv.pb.h
env/pycall_gym/: pycall_gym.h
gym_env/: draft.py  env.py  gymEnv_pb2.py  gymEnv_pb2_grpc.py
ib_test/: predata.py
network/: network.h  random_reply.h
network/dynet_network/: dynet_network.h  dynet_network_test.cpp  mlp.h
network/tiny_dnn/: tiny_dnn_network.h  tiny_dnn_network_test.cpp
proto/: gen_cpp.sh  gen_python.sh
python/DQN/: memory.py
rl_algorithm/: agent.h  env.h  rl_config.h  train.cpp
rl_algorithm/agent/: basic_agent.h
rl_algorithm/environment/gym_env/: gym_env.h
rl_algorithm/environment/gym_env/proto_out/: gymEnv.grpc.pb.h  gymEnv.pb.cc  gymEnv.pb.h
rl_algorithm/test/: demo.cpp
rlcpp/: CMakeLists.txt
rlcpp/agent/: agent.h
rlcpp/common/: state_action.h
rlcpp/env/: env.h
rlcpp/env/gym_env/: gym_env.h
rlcpp/test/: demo.cpp
rlcpp/train/: basic_train.cpp
test/: CMakeLists.txt  demo.cpp  draft.cpp  draft.py
test/dynet/: CMakeLists.txt  cl-args.h  data-io.h  dynet_network_test.cpp  getpid.h  mlp.h  my_mnist_test.cc  run.sh  train_linefit.cc  train_mnist.cc  train_xor.cc
test/dynet2pytorch/cpp/: CMakeLists.txt  load_dynet_model.hpp  main.cpp  mnist_model.cpp  xor_model.cpp
test/mnist/: mytrain.cpp  train.cpp
test/pycall/: CMakeLists.txt  call_gym.cpp  pycall_demo.cpp
test/tinydnn/: CMakeLists.txt  tiny_dnn_network_test.cpp
test/tinydnn/data/: mnist_mytrain
tools/: CMakeLists.txt  core_color.hpp  core_getopt.hpp  core_timer.hpp  memory_reply.h  rand.h  random_reply.h  random_tools.h  reduce_tree.h  ring_vector.h  utility.hpp  vector_tools.h
tools/RLtools/: memory_reply.py
tools/dynet_network/: dynet_network.h  mlp.h
tools/model_convert/: pytorch_dynet_convert.py
tools/model_convert/dynet2pytorch/cpp/: CMakeLists.txt
tools/model_convert/dynet2pytorch/python/: demo.py  dynet_xor.py  for_mnist.py  pytorch_xor.py
tools/python/: README.md
tools/python/DQN/: agent.py  train.py
tools/python/QLearning/: train.py  train_cartpole_v1.py
train/: CMakeLists.txt  basic_train.cpp  normal_train.cpp  train_AC.cpp  train_PPO_Continuous.cpp  train_PPO_Discrete.cpp  train_basic_test.cpp  train_ddpg.cpp  train_dqn.cpp  train_dqn_aifan.cpp  train_dqn_cartpole.cpp  train_dqn_dynet.cpp  train_dqn_tinydnn.cpp  train_dqn_tinydnn_cartpole.cpp  train_qlearning_cliffwalking.cpp  train_reinforce.cpp  train_sarsa_cliffwalking.cpp  train_test_utils.h  train_test_utils_ddpg.h
